add memory issue case