@@ -6,7 +6,8 @@ import java.util.Set;
 /**
  * <pre>
  * @Description:
- *  参数： -Xmx6M -XX:MaxMetaspaceSize=6M
+ * 运行时常量池溢出导致内存溢出 jdk7中
+ *  参数： -Xmx6M -XX:MaxMetaspaceSize=6M -XX:PermSize=6M
  * </pre>
  *
  * @version v1.0
